# watercooler

./: README.md  README.zh-CN.md  pyproject.toml  requirements.txt
scripts/: install-user-service.sh  install-user.sh  uninstall-user.sh
src/: config_manager.py  constant.py  light.py  main.py  tray_icon.py
src/watercooler/: config_manager.py  constant.py  light.py  main.py  tray_icon.py
